[terra-alert] Fix content wrapping  at high magnification (#3792)

--- a/packages/terra-alert/src/Alert.module.scss
+++ b/packages/terra-alert/src/Alert.module.scss
@@ -12,6 +12,7 @@
     margin: 0 0 1px;
     min-height: var(--terra-alert-min-height);
     overflow: hidden;
+    overflow-wrap: anywhere;
     width: 100%;
   }
 
